--- a/apps/fabric-contract/Makefile
+++ b/apps/fabric-contract/Makefile
@@ -3,6 +3,7 @@ SRC_PATH      := $(patsubst %/,%,$(dir $(abspath $(MAKEFILE_THIS))))
 APP_FILE      := fabric_contract.json
 APP_NAME      := flogo_cc
 LOG_LEVEL     := INFO
+CC_DEPLOY     := $(GOPATH)/src/github.com/hyperledger/fabric-samples/chaincode
 
 .PHONY: all
 all: create build
@@ -22,4 +23,11 @@ create: $(APP_FILE) clean
 
 .PHONY: build
 build: $(APP_NAME)
-	cd $(APP_NAME) && flogo build -e
+	cd $(APP_NAME) && \
+	env GOOS=linux GOARCH=amd64 flogo build -e
+
+.PHONY: deploy
+deploy: build
+	cp $(APP_NAME)/bin/linux_amd64/$(APP_NAME) $(APP_NAME)/src/$(APP_NAME) && \
+	rm -Rf $(CC_DEPLOY)/$(APP_NAME) && \
+	cp -Rf $(APP_NAME)/src/$(APP_NAME) $(CC_DEPLOY)
